Fix overflow issues

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,7 +1,9 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
-@custom-variant dark (&:is(.dark *));
+/* @custom-variant dark (&:is(.dark *)); */
+
+@custom-variant dark (&:where(.dark, .dark *));
 
 @theme inline {
   --color-background: var(--background);
@@ -137,5 +139,8 @@
   }
   body {
     @apply bg-background text-foreground;
+  }
+  .no-animation {
+    animation: none !important;
   }
 }
